add unit testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,4 +74,7 @@ target-version = "py310"
 dev = [
     "pytest>=9.0.2",
     "pytest-cov>=7.0.0",
+    "torchvision>=0.15.0",
+    "timm>=1.0.0",
+    "transformers>=4.30.0",
 ]
